# truflation

./: .dockerignore  .gitignore  Dockerfile  LICENSE  NEW_INGESTOR.md  PROJECTS.md  README.md  TODO.md  cci.csv  docker-compose.yml  overview.MD  pyproject.toml  setup.cfg
.github/workflows/: ci.yml
chainlink/: Dockerfile  docker-compose.yml
docs-temporary/: overview.MD  spec_example.md  spec_simplified.md  spec_specs.MD
example/: docker-compose-example.yml
example/csv_example/: my_pipeline_details.py
examples/: README.MD  bot.py  docker-compose-example.yml  example.csv  example.py  example_2.csv  example_old.py  f1.py  google_sheets.py  investing_com.py  memtest.py  sample.env  world_bank_gdp_growth.py  yahoo_finance.py
examples/1/: pipeline_details.py
examples/csv_example/: .env_template  Dockerfile  README.MD  docker-compose-example-csv.yml  example.py  example_2.csv  my_pipeline_details.py  my_pipeline_v2.py
examples/first/: example.py  my_pipeline_details.py
examples/ibkr/: docker-compose.yml  ibpy.py
examples/imf_data/: .env_template  imf_gb_pipeline.py
examples/imf_data/unit_tests/: sample_response.json  test_pipeline.py
examples/investing/: load_data.py  pipeline_details.py
examples/koii/: .gitignore  Dockerfile  docker-compose.yml  koii.py  package.json
examples/koii/src/: fetchAvgData.js  oldFetchAvgData.js  subProcessInvocation.py
examples/koii/truflation-task/: .env-local  .env.example  .gitignore  FindingHistoricData.json  LICENSE  README.md  config-task.yml  coreLogic.js  csvGeneration.py  data.csv  data.json  fetchAvgData.js  historicalData.json  index.js  kayak-task.js  metadata.json  package.json  run.sh  subProcessInvocation.py  webpack.config.js
examples/koii/truflation-task/_koiiNode/: koiiNode.js
examples/koii/truflation-task/helpers/: db.js  encodeData.js  getAlloc.js  makeChunks.js
examples/koii/truflation-task/model/: adapter.js  data.js
examples/koii/truflation-task/task/: audit.js  distribution.js  submission.js
examples/koii/truflation-task/tests/: test-round.js  unitTest.js
examples/kwil/: README.md  copy_investing.py  copy_out.py  copy_tables.py  kwil_demo.py  test_kwil.py
examples/sheets/: load_data.py  pipeline_details.py
src/tfi/data/: __init__.py  bundle.py  cache.py  calculation.py  connector.py  data.py  data_pipeline.py  details.py  example.csv  example.py  export_details.py  exporter.py  general_loader.py  importer.py  ingestor.py  loader.py  notes.txt  pipeline.py  pipeline_details.py  reader.py  source_details.py  task.py  transformer.py  validator.py  writer.py
src/truflation.data.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/truflation/data/: __init__.py  _metadata_handler.py  connector.py  economic_data_ingestor.py  export_details.py  exporter.py  frozen.py  general_loader.py  loader.py  logging_handler.py  logging_manager.py  metadata.py  multi_pipeline_coupler.py  pipeline.py  pipeline_coupler.py  pipeline_details.py  pipeline_run_direct.py  pipeline_run_server.py  reader.py  rt_http_server.py  source_details.py  task.py  telegram_monitor.py  util.py  validator.py  writer.py
src/truflation/data_v2/: cache.py  factory.py  pipeline.py  types.py
tests/: database.db  eggs.csv  eggs.out.csv  example.csv  happy_test.csv  metadata_handler_test.py  metadata_handler_test_local.py  test_economic_data_ingestor.py  test_eip712.py  test_exporter.py  test_frozen.py  test_happy.py  test_kwil.py  test_rest_to_csv.py  test_signer.py  test_simple.py
(+37 files in other folders)
