[tool.poetry]
name = "tfi.data"
version = "0.0.1"
description = "TFI data framework"
authors = ["Laguna Labs"]
license = "BSD Simplified"
readme = "README.md"

[tool.poetry.dependencies]
sqlalchemy = ">= 2.0.12"
sqlalchemy-stubs = ">= 2.0.12"
pandas = ">= 2.0.1"
overrides = ">= 7.3.1"

[tool.pytest.ini_options]
pythonpath = "src"
addopts = [
    "--import-mode=importlib",
]
