[project]
name = "tfi.data"
version = "0.0.1"
description = "TFI data framework"
authors = [
  { name = "Laguna Labs" }
]
license = { text = "BSD Simplified" }
readme = "README.md"

dependencies = [
  'sqlalchemy >= 2.0.12',
  'sqlalchemy-stubs >= 0.4',
  'pandas >= 2.0.1',
  'overrides >= 7.3.1'
]

[tool.pytest.ini_options]
pythonpath = "src"
addopts = [
    "--import-mode=importlib",
]

[tool.setuptools.package-data]
"tfi.data" = ["py.typed"]