[metadata]
name = tfi.data
version = 0.0.1
description = TFI data framework
authors = Laguna Labs
license = BSD Simplified
readme = README.md

[options]
install_requires =
  sqlalchemy >= 2.0.12
  sqlalchemy-stubs >= 0.4
  pandas >= 2.0.1
  overrides >= 7.3.1
  tdda >= 1.0.13
  feather-format >= 0.4.1
  pytest >= 7.3.1
  pymysql

package_dir=
    =src
packages=find:

[options.packages.find]
where=src