[metadata]
name = truflation.data
version = 0.0.1
description = Truflation data framework
authors = Laguna Labs
license = BSD Simplified
readme = README.md

[options]
install_requires =
  sqlalchemy >= 2.0.12
  sqlalchemy-stubs >= 0.4
  pandas >= 2.0.1
  overrides >= 7.3.1
  tdda >= 1.0.13
  feather-format >= 0.4.1
  pytest >= 7.3.1
  apscheduler >= 3.10.1
  pymysql
  playwright >= 1.33.0
  requests >=2.25.1
  PyMySQL >=1.0.2
  python-dotenv >=0.21.0
  docopt >= 0.6.2

package_dir=
    =src
packages=find:

[options.packages.find]
where=src